--- a/InitiativesPlus.Infrastructure.IoC/InitiativesPlus.Infrastructure.IoC.csproj
+++ b/InitiativesPlus.Infrastructure.IoC/InitiativesPlus.Infrastructure.IoC.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ProjectGuid>{0613E7CE-E5FE-4891-84EF-925BE76FCEE3}</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
